# SDL2-engine

./: CMakeLists.txt  SDL2Config.cmake
SDL2-engine/: CMakeLists.txt  SDL2-engine.cpp  SDL2-engine.h
SDL2-engine/facades/: CollisionDetector.cpp  CollisionDetector.hpp  FileWriter.cpp  FileWriter.hpp  InputController.cpp  InputController.hpp  SoundController.cpp  SoundController.hpp
SDL2-engine/interfaces/: ICamera.hpp  IFileSaver.cpp  IFileSaver.hpp  IGameObject.hpp  IRenderer.cpp  IRenderer.hpp
