# CMakeList.txt : CMake project for SDL2-engine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SDL2-engine "SDL2-engine.cpp" "SDL2-engine.h")

# TODO: Add tests and install targets if needed.
